ec2.yml
Description: >
  Marco Graupmann - stupid ec2 env

Parameters:
  EnvironmentName:
    Description: An environment name that will be prefixed to resource names
    Type: String
    Default: "capstone-env"

  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: "10.0.0.0/16"

  PublicSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    Default: "10.0.0.0/24"

  ec2AMI:
    Description: Which AMI we want to use
    Type: String
    Default: "ami-0453cb7b5f2b7fca2"

  InstType:
    Description: Which Instance Type  we want to use
    Type: String
    Default: "t2.medium"

  TagTier:
    Description: Which Tier
    Type: String
    Default: "NA"

  TagTechnicalOwner:
    Description: Which TechnicalOwner
    Type: String
    Default: "Marco Graupmann"

  TagBusinessUnit:
    Description: Which BusinessUnit
    Type: String
    Default: "Forward"

  TagEnvironment:
    Description: Which Environment
    Type: String
    Default: "Sandbox"

  TagApplication:
    Description: Which Application
    Type: String
    Default: "Capstone"


Resources:
  #setup vpc
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-vpc
        - Key: Tier
          Value: !Ref TagTier
        - Key: TechnicalOwner
          Value: !Ref TagTechnicalOwner
        - Key: BusinessUnit
          Value: !Ref TagBusinessUnit
        - Key: Environment
          Value: !Ref TagEnvironment
        - Key: Application
          Value: !Ref TagApplication

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet (AZ1)
        - Key: Tier
          Value: !Ref TagTier
        - Key: TechnicalOwner
          Value: !Ref TagTechnicalOwner
        - Key: BusinessUnit
          Value: !Ref TagBusinessUnit
        - Key: Environment
          Value: !Ref TagEnvironment
        - Key: Application
          Value: !Ref TagApplication

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} InternetGateway
        - Key: Tier
          Value: !Ref TagTier
        - Key: TechnicalOwner
          Value: !Ref TagTechnicalOwner
        - Key: BusinessUnit
          Value: !Ref TagBusinessUnit
        - Key: Environment
          Value: !Ref TagEnvironment
        - Key: Application
          Value: !Ref TagApplication

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

 #We also need routing tables - here for public
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Routes
        - Key: Tier
          Value: !Ref TagTier
        - Key: TechnicalOwner
          Value: !Ref TagTechnicalOwner
        - Key: BusinessUnit
          Value: !Ref TagBusinessUnit
        - Key: Environment
          Value: !Ref TagEnvironment
        - Key: Application
          Value: !Ref TagApplication

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow ssh from public
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 8000
        ToPort: 8000
        CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref ec2AMI
      InstanceType: !Ref InstType
      KeyName: test-ec2
      SubnetId: !Ref PublicSubnet1
      SecurityGroupIds:
        - !Ref EC2SecurityGroup
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-kubernetes'
        - Key: Tier
          Value: !Ref TagTier
        - Key: TechnicalOwner
          Value: !Ref TagTechnicalOwner
        - Key: BusinessUnit
          Value: !Ref TagBusinessUnit
        - Key: Environment
          Value: !Ref TagEnvironment
        - Key: Application
          Value: !Ref TagApplication
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo yum update -y
          sudo amazon-linux-extras install docker -y
          sudo service docker start
          sudo usermod -a -G docker ec2-user
          curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
          chmod +x ./kubectl
          sudo mv ./kubectl /usr/local/bin/kubectl
          curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
          chmod +x minikube
          sudo mv minikube /usr/local/bin/
          minikube start
          #following needed for port 80 forward; otherwise only ports > 1024 can be forwared
          sudo setcap CAP_NET_BIND_SERVICE=+eip /usr/bin/kubectl


Outputs:

  VPC:
    Description: A reference to the created VPC
    Value: !Ref VPC
    Export:
      Name: !Sub "${AWS::StackName}-VPCID"

  EC2InstancePublicIp:
    Description: 'EC2 Public IP'
    Value: !Sub ${EC2Instance.PublicIp}
